# vivosun-thermo

./: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml  requirements.dev.txt  requirements.proto.txt  requirements.txt
docs/: knowledge-vs-thb1s.md
examples/: prototype.py
src/vivosun_thermo/: __main__.py  app.py  client.py  conversion.py  format.py  scanner.py
tests/vivosun_thermo/: test_client.py
vivosun_thermo/: __init__.py  __main__.py  app.py  client.py
